# app/Http/Controllers/AuthApiController.php
@@ -127,6 +127,7 @@ class AuthApiController extends Controller
 
         Log::debug("Calling pin validation procedure");
         // About to verify pin. Calling procedure.
+        Log::debug("Old pin is ");
         
         $resp = $this->pinValidationFunc($number, $password);
 
@@ -322,7 +323,7 @@ class AuthApiController extends Controller
      */
     /**
      * @OA\Post(
-     *     path="/api/register-account",
+     *     path="/api/register-customer",
      *     @OA\Response(response="200", description="Success"),
      *     @OA\RequestBody(
      *         description="request parameters to register user",
@@ -354,8 +355,7 @@ class AuthApiController extends Controller
         $lastName = $request->lastName;
         $gender = $request->gender;
         $mobileNumber = $request->mobileNumber;
-        $altMobileNumber = $request->altMobileNumber;
-        $type = $request->type;
+        $type = "CUSTOMER";
 
         $proceed = true;
 
@@ -363,8 +363,6 @@ class AuthApiController extends Controller
         Log::debug($firstName);
         Log::debug($gender);
         Log::debug($mobileNumber);
-        Log::debug($altMobileNumber);
-        Log::debug($type);
 
         if($gender=='f' || $gender=='F'){
             $gender = "FEMALE";
@@ -387,35 +385,17 @@ class AuthApiController extends Controller
             Log::debug("Calling procedure");
 
             try{
-                if($type=='CUSTOMER'){
-                    $resp = DB::select('exec kafNewAccountCust ?, ?, ?, ?',array($firstName, $lastName, $gender, $mobileNumber));
+                $resp = DB::select('exec kafNewAccountCust ?, ?, ?, ?',array($firstName, $lastName, $gender, $mobileNumber));
+
+                Log::debug($resp);
+                Log::debug(json_decode(json_encode($resp[0]), true));
+                $message = "Customer added successfully";
+                $respSummary = $resp[0]->AccountNumber;
+                Log::debug("Customer added successfully");
+                Log::debug($respSummary);
+                $respCode = 200;
+                $resp = $resp[0];
     
-                    Log::debug($resp);
-                    Log::debug(json_decode(json_encode($resp[0]), true));
-                    $message = "Customer added successfully";
-                    $respSummary = $resp[0]->AccountNumber;
-                    Log::debug("Customer added successfully");
-                    Log::debug($respSummary);
-                    $respCode = 200;
-                    $resp = $resp[0];
-    
-                } else if ($type=='FIELD') {
-                    $resp = DB::select('exec kafNewAccountField ?, ?, ?, ?, ?',array($firstName, $lastName, $gender, $mobileNumber, $altMobileNumber));
-                    
-                    Log::debug($resp);
-                    Log::debug(json_decode(json_encode($resp[0]), true));
-                    $message = "Field Officer added successfully";
-                    $respSummary = $resp[0]->AccountID;
-                    Log::debug("Field Officer added successfully");
-                    Log::debug($respSummary);
-                    $respCode = 200;
-                    $resp = $resp[0];
-                } else {
-                    $message = "Unknown customer type.";
-                    $respSummary = "FAILED";
-                    $respCode = 406;
-                    $resp = null;
-                }
             } catch(Exception $e){
                 $message = "An error occurred while registering. Please try again.";
                 $respSummary = "FAILED";
@@ -426,6 +406,119 @@ class AuthApiController extends Controller
 
             if($respSummary=='Already Exist'){
                 $message = "User already exists.";
+                $respSummary = "FAILED";
+                $resp = null;
+                $respCode = 402;
+            } else if($respSummary==0){
+                $message = "Account not registered. Please try again later.";
+                $respSummary = "FAILED";
+                $resp = null;
+                $respCode = 405;
+            }
+
+            // Calling procedure to credit account number
+
+            Log::debug("Response from procedure");
+            // Log::debug(json_decode(json_encode($resp[0]), true));
+            // Log::debug(var_dump($resp[0]));
+            // Log::debug(var_dump($resp[0]));
+            // Log::debug($resp[0]->Status);
+        }
+
+        return new UserResponseResource($resp, $respCode, $message, $type);
+    }
+
+    /**
+     * Save field deposit.
+     */
+    /**
+     * @OA\Post(
+     *     path="/api/create-field-account",
+     *     @OA\Response(response="200", description="Success"),
+     *     @OA\RequestBody(
+     *         description="request parameters to register user",
+     *         required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/CreateFieldAccountRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation"
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
+    public function createFieldAccount(Request $request)
+    {
+        //
+        $firstName = $request->firstName;
+        $lastName = $request->lastName;
+        $gender = $request->gender;
+        $mobileNumber = $request->mobileNumber;
+        $agentMobileNumber = $request->agentMobileNumber;
+        $type = "FIELD AGENT ACCOUNT";
+
+        $proceed = true;
+
+        Log::debug("Request received");
+        Log::debug($firstName);
+        Log::debug($gender);
+        Log::debug($mobileNumber);
+        Log::debug($agentMobileNumber); 
+
+        if($gender=='f' || $gender=='F'){
+            $gender = "FEMALE";
+        } else if($gender=='m' || $gender=='M'){
+            $gender = "MALE";
+        } else {
+            $proceed = false;
+        }
+
+        $message = "Failed to register.";
+        $respSummary = "FAILED";
+        $respCode = 301;
+        $resp = null;
+
+        if($proceed==false){
+            $message = "Unknown gender.";
+            $respSummary = "FAILED";
+            $respCode = 407;
+        } else {
+            Log::debug("Calling procedure");
+
+            try{
+
+                $resp = DB::select('exec kafNewAccountField ?, ?, ?, ?, ?',array($firstName, $lastName, $gender, $mobileNumber, $agentMobileNumber));
+                
+                Log::debug($resp);
+                Log::debug(json_decode(json_encode($resp[0]), true));
+                $message = "Field Officer added successfully";
+                $respSummary = $resp[0]->AccountID;
+                Log::debug("Field Officer added successfully");
+                Log::debug($respSummary);
+                $respCode = 200;
+                $resp = $resp[0];
+
+            } catch(Exception $e){
+                $message = "An error occurred while registering. Please try again.";
+                $respSummary = "FAILED";
+                $respCode = 412;
+                $resp = null;
+            }
+            
+
+            if($respSummary=='Already Exist'){
+                $message = "Account already exists.";
                 $respSummary = "FAILED";
                 $resp = null;
                 $respCode = 402;
