# storage/api-docs/api-docs.json
@@ -266,9 +266,9 @@
                 }
             }
         },
-        "/api/register-account": {
+        "/api/register-customer": {
             "post": {
-                "operationId": "a0965bc91eb2a0f86b8f67b45a789dbb",
+                "operationId": "411dd58a65624ad8f57d0202a7036f09",
                 "requestBody": {
                     "description": "request parameters to register user",
                     "required": true,
@@ -276,6 +276,39 @@
                         "application/json": {
                             "schema": {
                                 "$ref": "#/components/schemas/RegisterRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/create-field-account": {
+            "post": {
+                "operationId": "b4551e532387d86ef5b0433442f241e8",
+                "requestBody": {
+                    "description": "request parameters to register user",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CreateFieldAccountRequest"
                             }
                         }
                     }
@@ -379,6 +412,50 @@
                         "description": "User Password or Pin",
                         "type": "string",
                         "example": "0000"
+                    }
+                },
+                "type": "object"
+            },
+            "CreateFieldAccountRequest": {
+                "title": "Create Field Account Request",
+                "description": "Create Field Account request",
+                "required": [
+                    "firstName",
+                    "lastName",
+                    "gender",
+                    "mobileNumber",
+                    "fieldAgentMobileNumber"
+                ],
+                "properties": {
+                    "firstName": {
+                        "title": "firstName",
+                        "description": "User first name",
+                        "type": "string",
+                        "example": "John"
+                    },
+                    "lastName": {
+                        "title": "lastName",
+                        "description": "User last name",
+                        "type": "string",
+                        "example": "Doe"
+                    },
+                    "gender": {
+                        "title": "gender",
+                        "description": "User's gender",
+                        "type": "string",
+                        "example": "m"
+                    },
+                    "mobileNumber": {
+                        "title": "mobileNumber",
+                        "description": "Customer's mobile number",
+                        "type": "string",
+                        "example": "0557001000"
+                    },
+                    "agentMobileNumber": {
+                        "title": "fieldAgentMobileNumber",
+                        "description": "Field Officer's mobile number",
+                        "type": "string",
+                        "example": "0557001006"
                     }
                 },
                 "type": "object"
@@ -494,18 +571,6 @@
                         "description": "User's mobile number",
                         "type": "string",
                         "example": "0557001000"
-                    },
-                    "altMobileNumber": {
-                        "title": "altMobileNumber",
-                        "description": "User's alternative mobile number",
-                        "type": "string",
-                        "example": "0557001006"
-                    },
-                    "type": {
-                        "title": "type",
-                        "description": "Registration type",
-                        "type": "string",
-                        "example": "CUSTOMER / FIELD"
                     }
                 },
                 "type": "object"
